# pick-basic-treesitter-lsp

./: .talismanrc  README.md  package-lock.json  package.json
pickbasic-lsp/: pyproject.toml
queries/: folds.scm
src/: grammar.json
test/corpus/: control_flow.txt  file_io.txt  functions.txt
tree-sitter-pickbasic/: grammar.js  tree-sitter.json
tree-sitter-pickbasic/queries/: highlights.scm
tree-sitter-pickbasic/src/: node-types.json
tree-sitter-pickbasic/test/corpus/: expressions.txt  statements.txt
