[tool.poetry]
name = "pickbasic-lsp"
version = "0.1.0"
description = "Language Server Protocol implementation for Pick BASIC"
packages = [{include = "pickbasic_lsp"}]

[tool.poetry.dependencies]
python = ">=3.10"
pygls = ">=1.3"
tree-sitter = ">=0.23"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"

[tool.poetry.scripts]
pickbasic-lsp = "pickbasic_lsp.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
